Fix chat page flickering

--- a/src/styles/chat.css
+++ b/src/styles/chat.css
@@ -31,10 +31,6 @@
   background-color: #182125;
 }
 
-a {
-  font-style: italic;
-}
-
 a:hover {
   color: white;
 }
